# smartserial

./: .gitignore  .travis.yml  CMakeLists.txt  CallbackWrapper.h  CallbackWrapperInterface.h  CommandStorage.h  LICENSE  README.md  SmartSerial.cpp  SmartSerial.h  SmartSerialHelper.cpp  SmartSerialHelper.h  StreamInterface.h  library.properties
examples/ledcontroller/: ledcontroller.ino
ext/gtest/: CMakeLists.txt
src/: CallbackWrapper.h  CommandStorage.h  Converter.cpp  Converter.h  SerialStream.cpp  SerialStream.h  SmartSerial.cpp  SmartSerial.h  SmartSerialDefines.h  SmartSerialHelper.h  StreamInterface.h
tests/: CallbackWrapperTests.cpp  CommandStorageTests.cpp  ConverterTest.cpp  SmartSerialTest.cpp  tests.cpp
